fixed underline of titles to make them more readable

--- a/src/Components/Project/project.css
+++ b/src/Components/Project/project.css
@@ -23,7 +23,10 @@
 
 .project-title {
   line-height: 2;
-  text-decoration: underline;
+  /* text-decoration: underline;
+  text-decoration-color: rgb(185, 0, 93); */
+  width: auto;
+  border-bottom: white 2px solid;
   margin-top: -2rem;
 }
 
